<resources>
    <string name="app_name">9 Ball Scorekeeper</string>

    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="match_points_abbreviation">MP</string>

    <string name="all_time">All Time</string>
    <string name="all_time_stats">All Time Stats</string>
    <string name="game">Game</string>
    <string name="player_stats">Player Stats</string>
    <string name="rack_stats">Rack Stats</string>
    <string name="history">History</string>
    <string name="history_stats">History Stats</string>
    <string name="settings">Settings</string>
    <string name="edit_game_string">Edit Game String</string>
    <string name="twenty_three_rule">23 Rule</string>
    <string name="chart">Chart</string>

    <string name="legal_shot">Legal Shot</string>
    <string name="scratch">Scratch</string>
    <string name="wrong_first">Wrong First</string>
    <string name="miss">Miss</string>
    <string name="no_rail">No Rail</string>
    <string name="off_table">Off Table</string>
    <string name="other_foul">Other Foul</string>
    <string name="ball_in_hand">Ball In Hand</string>
    <string name="match_points_running_total">%1$d (%2$d)</string>
    <string name="win_to_win">Win To Win</string>
    <string name="score_to_win">Score %1$d To Win</string>
    <string name="prevent_to_win">Prevent %1$d To Win</string>

    <string name="default_game_info_string">Player 1: \nPlayer 2: \nTeam 1: \nTeam 2: \nLocation: \nDate: %1$s\nGoal 1: \nGoal 2: </string>

    <string name="player_vs_player">%1$s vs %2$s</string>
    <string name="at_location_on_date">at %1$s on %2$s</string>
    <string name="score_score">%1$d - %2$d</string>
    <string name="x_innings">%1$d innings</string>
    <string name="score_goal">/%1$d</string>
    <string name="percent">%1.1f%%</string>
    <string name="percent_range">%1.1f%% - %2.1f%%</string>

    <string name="this_turn">This Turn</string>
    <string name="dead">Dead</string>

    <string name="no_rail_error">You cannot have balls pocketed with a No Rail foul.</string>
    <string name="miss_error">You cannot have balls pocketed with a Miss foul.</string>
    <string name="bad_break_error">Scratch and Off Table are the only fouls that are allowed with Bad Break.</string>
    <string name="miscue_good_break_error">You cannot miscue on a good break.</string>
    <string name="wrong_first_on_nine_error">You cannot have a Wrong First foul with only the 9 on the table.</string>
    <string name="bank_and_defense_error">You cannot attempt both a bank and a defense in the same shot.</string>
    <string name="break_bank_error">You cannot bank on the break.</string>
    <string name="break_defense_error">You cannot play defense on the break.</string>
    <string name="break_lucky_error">You cannot score lucky points on the break.</string>
    <string name="break_time_out_error">You cannot call a time out on the break.</string>
    <string name="time_out_limit_one_error">You already used a time out this rack.</string>
    <string name="time_out_limit_two_error">You already used two time outs this rack.</string>

    <string name="game_info_updated">Game Info Updated</string>
    <string name="game_deleted">Game Deleted</string>
    <string name="game_loaded">Game Loaded</string>
    <string name="save_are_you_sure">Are you sure you want to save this game and start a new game?</string>
    <string name="load_or_delete">Would you like to load or delete this game?</string>
    <string name="delete_are_you_sure">Are you sure you want to delete this game?\n\n%1$s\n%2$s\n%3$s\n%4$s</string>
    <string name="load_are_you_sure">Are you sure you want to load this game and end your current game without saving?</string>
    <string name="load_revert_are_you_sure">Are you sure you want to load this game and revert your current saved game?</string>
    <string name="reset_are_you_sure">Are you sure you want to end this game without saving and start a new game?</string>
    <string name="reset_revert_are_you_sure">Are you sure you want to revert your saved game and start a new game?</string>
    <string name="save_string_are_you_sure">Manually editing the game strings can cause you to lose your data and can cause errors if done wrong. Are you sure you want to save your changes?</string>
    <string name="edit_string_are_you_sure">Manually editing the game strings can cause you to lose your data and can cause errors if done wrong. Are you sure you want to continue?</string>
    <string name="game_string_contains_errors_title">Invalid Game String</string>
    <string name="game_string_contains_errors_message">Game string contains errors. Are you sure you want to continue?</string>

    <string name="spoken_score">Current Score. %1$s, %2$s. %3$s, %4$s.</string>
    <string name="spoken_final_score">Final Score. %1$s, %2$s. %3$s, %4$s.</string>
    <string name="goose_egg">goose egg</string>
    <string name="current_streak">%1$s streak, %2$d.</string>
    <string name="tournament_over">Tournament Over. %1$s win.</string>

    <string name="congrats_break_and_run">Break and run. Congratulations, %1$s.</string>
    <string name="congrats_perfect_rack">Perfect rack. Congratulations, %1$s.</string>
    <string name="congrats_nine_on_break">Nine on break. Congratulations, %1$s.</string>

    <string name="this_game">This Game</string>
    <string name="game_list">Game List</string>

    <string-array name="edit_shots_array">
        <item name="add_empty_shot_before_after">Add empty shots before and after.</item>
        <item name="add_empty_shot_before">Add empty shot before.</item>
        <item name="add_empty_shot_after">Add empty shot after.</item>
        <item name="edit_shot">Edit shot.</item>
    </string-array>

    <string name="edit_shot">Edit Shot</string>
</resources>